fixed solution.css donate.css.style.css alignment

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ header {
 }
 
 .navbar .logo {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     color: #ffffff;
 }
 
@@ -424,11 +424,10 @@ header {
 
     .hero-content p {
         font-size: 1rem;
-        margin-top: 40px;
-        margin-bottom: 40px;
+        margin: 0 auto;
         text-align: center;
-        margin-left: 5px;
         max-width: 100%;
+        padding: 30px;
     }
 
     .hero-content .btn {
@@ -438,6 +437,5 @@ header {
         color: white;
         text-decoration: none;
         border-radius: 5px;
-        margin-left: 185px;
     }
 }
